[package]
name = "unit_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
value_unit = { path = "C:\\Users\\flori\\OneDrive\\Bureaublad\\desktop-files\\rust\\value_unit" }
# value_unit = "0.1.1"
